<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Reset"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/Heading"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="649dp"
        android:contentDescription="@string/grid"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="405dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/first"
                android:focusable="auto"
                android:padding="30dp"
                android:tag="0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/second"
                android:padding="30dp"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/third"
                android:padding="30dp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/forth"
                android:padding="30dp"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/fifth"
                android:padding="30dp"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/sixth"
                android:padding="30dp"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/seventh"
                android:padding="30dp"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/eight"
                android:padding="30dp"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/nineth"
                android:padding="30dp"
                android:tag="8" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="X's Turn to Play"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>